--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "postcss": "^8.5.3",
     "postgresql": "^0.0.1",
     "prisma": "^6.5.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
