--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^20.17.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.0.12",
     "ts-node": "^10.9.2",
     "typescript": "^5"
